# CDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yk/cdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com.yk_cdemo_JniUtils.cpp  com_yk_cdemo_JniUtils.h
app/src/main/java/com/yk/cdemo/: CrashCpp.java  JniUtils.java  MainActivity.java
app/src/test/java/com/yk/cdemo/: ExampleUnitTest.java
breakpad-build/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
